--- a/bank-backend/cloudbuild.yaml
+++ b/bank-backend/cloudbuild.yaml
@@ -1,6 +1,24 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<module version="4">
-  <component name="SonarLintModuleSettings">
-    <option name="uniqueId" value="6156e399-e5d4-4b0c-847b-27105a78fbad" />
-  </component>
-</module>
+# File: bank-backend/cloudbuild.yaml
+
+steps:
+  # Step 1: Build backend Docker image
+  - name: 'gcr.io/cloud-builders/docker'
+    args:
+      [
+        'build',
+        '-t', 'northamerica-northeast2-docker.pkg.dev/gcp-class-14/ritesh-bank-repo/bank-backend:latest',
+        '.'
+      ]
+
+  # Step 2: Push backend image to Artifact Registry
+  - name: 'gcr.io/cloud-builders/docker'
+    args:
+      [
+        'push',
+        'northamerica-northeast2-docker.pkg.dev/gcp-class-14/ritesh-bank-repo/bank-backend:latest'
+      ]
+
+  # Step 3: Deploy backend to Cloud Run
+  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+    entrypoint: gcloud
+    args:
